--- a/css/style.css
+++ b/css/style.css
@@ -9,18 +9,18 @@
 }
 #slider {
     position: absolute;
-    width: 50vw;
-    height: 50vh;
+    width: 100%;
+    height: 70vh;
     top:50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    
+    transform: translate(-50%, -50%);    
 }
 .slide {
     display: block;
     height: 100%;
-    width: 100%; 
-    object-fit:contain;
+    width: 50%; 
+    object-fit:cover;
+    margin: 0 auto;
 }
 .hidden {
     display: none;
@@ -44,3 +44,4 @@ button {
     cursor: pointer;
     color: white;
 }
+
