--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     display: block;
     height: 100%;
     width: 50%; 
-    object-fit:cover;
+    object-fit: cover;
     margin: 0 auto;
 }
 .hidden {
@@ -74,9 +74,11 @@ button {
     #thumbHolder {
         position: absolute;
         top: 15%;
-        right: 23%;
+        right: 14%;
         width: 200px;
+        z-index: 9999;
     }
     .thumb {
-        width: 200px;
+        width: 250px;
+        height: 128px;
     }
